--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,1 +1,9 @@
-<h1> OKOKOKOKK</h1>
+{{#each posts as |post|}}
+  <div class="card">
+    <a href="/post/{{post.id}}"><h5 class="card-header">{{title}}</h5></a>
+    <div class="card-body">
+      <h5 class="card-title">Published by {{post.user.username}}</h5>
+      <p class="card-text">{{description}}</p>
+    </div>
+  </div>
+{{/each}}
