--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,19 @@
     <title>Document</title>
 </head>
 <body>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-bottom: 25px;">
+  <div class="container-fluid">
+    
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page" href="#">Home</a>
+        <a class="nav-link" href="#">Dashboard</a>
+        <a class="nav-link" href="#">Login</a>
+      </div>
+    </div>
+  </div>
+</nav>
     {{{body}}}
 </body>
 </html>
