--- a/views/comment.handlebars
+++ b/views/comment.handlebars
@@ -1,1 +1,18 @@
-<h1>Teehee!</h1>
+<p>{{post.comment.content}} Heyoo</p>
+<div class="card" tabindex="-1">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">{{post.title}}</h5>
+        <br>
+        <p>{{post.user.username}}</p>
+      </div>
+      <div class="modal-body">
+        <p>{{post.description}}</p>
+      </div>
+      <div class="modal-footer">
+        <p>{{post.comment.content}} Heyoo</p>
+      </div>
+    </div>
+  </div>
+</div>
