--- a/views/comment.handlebars
+++ b/views/comment.handlebars
@@ -1,17 +1,16 @@
-<p>{{post.comment.content}} Heyoo</p>
 <div class="card" tabindex="-1">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">{{post.title}}</h5>
+        <h5 class="modal-title">{{pageComment.blogPost.title}}</h5>
         <br>
-        <p>{{post.user.username}}</p>
+        <p>{{pageComment.user.username}}</p>
       </div>
       <div class="modal-body">
-        <p>{{post.description}}</p>
+        <p>{{pageComment.blogPost.description}}</p>
       </div>
       <div class="modal-footer">
-        <p>{{post.comment.content}} Heyoo</p>
+        <p>{{pageComment.content}} Heyoo</p>
       </div>
     </div>
   </div>
