--- a/views/test.handlebars
+++ b/views/test.handlebars
@@ -17,8 +17,8 @@
         </div>
       {{/each}}
 
-        <textarea></textarea>
-        <button>Comment</button>
+        <textarea id="commentHere"></textarea>
+        <button id="addComment">Comment</button>
     </div>
   </div>
 </div>
